✅ Меню каталога в шапке

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,6 +28,7 @@
         "source/pug/top.pug",
         "source/pug/header.pug",
         "source/pug/menu-catalog.pug",
+        "source/pug/top-menu-catalog.pug",
         "source/pug/breadcrumbs.pug",
         "source/pug/catalog.pug",
         "source/pug/info.pug",
