✅ Меню каталога в шапке

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -61,6 +61,7 @@
         "source/pug/sprite.pug",
         "source/pug/top.pug",
         "source/pug/header.pug",
+        "source/pug/top-menu-catalog.pug",
         "source/pug/menu-catalog.pug",
         "source/pug/envelope.pug",
         "source/pug/env-catalog.pug",
@@ -78,6 +79,7 @@
         "source/pug/top.pug",
         "source/pug/header.pug",
         "source/pug/menu-catalog.pug",
+        "source/pug/top-menu-catalog.pug",
         "source/pug/breadcrumbs.pug",
         "source/pug/article.pug",
         "source/pug/foo-nav.pug",
