--- a/prepros-6.config
+++ b/prepros-6.config
@@ -86,6 +86,22 @@
         "source/pug/map-of-services.pug",
         "source/pug/script.pug"
       ]
+    },
+    {
+      "path": "source/card.pug",
+      "imports": [
+        "source/pug/head.pug",
+        "source/pug/sprite.pug",
+        "source/pug/top.pug",
+        "source/pug/header.pug",
+        "source/pug/menu-catalog.pug",
+        "source/pug/top-menu-catalog.pug",
+        "source/pug/breadcrumbs.pug",
+        "source/pug/card.pug",
+        "source/pug/foo-nav.pug",
+        "source/pug/map-of-services.pug",
+        "source/pug/script.pug"
+      ]
     }
   ],
   "projectView": {
