✅ характеристики к карточке товара

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,53 +21,38 @@
   },
   "imports": [
     {
-      "path": "source/index.pug",
+      "path": "source/-article.pug",
       "imports": [
         "source/pug/head.pug",
         "source/pug/sprite.pug",
-        "source/pug/top.pug",
         "source/pug/header.pug",
-        "source/pug/menu-catalog.pug",
-        "source/pug/top-menu-catalog.pug",
         "source/pug/breadcrumbs.pug",
-        "source/pug/catalog.pug",
-        "source/pug/info.pug",
-        "source/pug/foo-nav.pug",
-        "source/pug/map-of-services.pug",
+        "source/pug/article.pug",
+        "source/pug/foo.pug",
         "source/pug/script.pug"
       ]
     },
     {
-      "path": "source/stylus/style.styl",
-      "imports": [
-        "source/stylus/inc/variables.styl",
-        "source/stylus/inc/mixin.styl",
-        "source/stylus/inc/typo.styl",
-        "source/stylus/inc/text.styl",
-        "source/stylus/inc/paper.styl",
-        "source/stylus/inc/card.styl",
-        "source/stylus/inc/section.styl",
-        "source/stylus/inc/w.styl",
-        "source/stylus/inc/offset.styl",
-        "source/stylus/inc/swiper.styl",
-        "source/stylus/inc/iCheck.styl",
-        "source/stylus/inc/ion-rangeSlider.styl"
-      ]
-    },
-    {
-      "path": "source/env.pug",
+      "path": "source/-card.pug",
       "imports": [
         "source/pug/head.pug",
         "source/pug/sprite.pug",
-        "source/pug/top.pug",
         "source/pug/header.pug",
-        "source/pug/top-menu-catalog.pug",
-        "source/pug/menu-catalog.pug",
-        "source/pug/envelope.pug",
-        "source/pug/env-catalog.pug",
-        "source/pug/info.pug",
-        "source/pug/foo-nav.pug",
-        "source/pug/map-of-services.pug",
+        "source/pug/breadcrumbs.pug",
+        "source/pug/card.pug",
+        "source/pug/foo.pug",
+        "source/pug/script.pug"
+      ]
+    },
+    {
+      "path": "source/-catalog.pug",
+      "imports": [
+        "source/pug/head.pug",
+        "source/pug/sprite.pug",
+        "source/pug/header.pug",
+        "source/pug/breadcrumbs.pug",
+        "source/pug/catalog.pug",
+        "source/pug/foo.pug",
         "source/pug/script.pug"
       ]
     },
@@ -98,9 +83,80 @@
         "source/pug/top-menu-catalog.pug",
         "source/pug/breadcrumbs.pug",
         "source/pug/card.pug",
+        "source/pug/chars.pug",
+        "source/pug/foo-nav.pug",
+        "source/pug/map-of-services.pug",
+        "source/pug/script.pug",
+        "source/pug/aside-rec.pug"
+      ]
+    },
+    {
+      "path": "source/env.pug",
+      "imports": [
+        "source/pug/head.pug",
+        "source/pug/sprite.pug",
+        "source/pug/top.pug",
+        "source/pug/header.pug",
+        "source/pug/top-menu-catalog.pug",
+        "source/pug/menu-catalog.pug",
+        "source/pug/envelope.pug",
+        "source/pug/env-catalog.pug",
+        "source/pug/info.pug",
         "source/pug/foo-nav.pug",
         "source/pug/map-of-services.pug",
         "source/pug/script.pug"
+      ]
+    },
+    {
+      "path": "source/index.pug",
+      "imports": [
+        "source/pug/head.pug",
+        "source/pug/sprite.pug",
+        "source/pug/top.pug",
+        "source/pug/header.pug",
+        "source/pug/menu-catalog.pug",
+        "source/pug/top-menu-catalog.pug",
+        "source/pug/breadcrumbs.pug",
+        "source/pug/catalog.pug",
+        "source/pug/info.pug",
+        "source/pug/foo-nav.pug",
+        "source/pug/map-of-services.pug",
+        "source/pug/script.pug"
+      ]
+    },
+    {
+      "path": "source/pug/chars.pug",
+      "imports": [
+        "source/pug/aside-rec.pug"
+      ]
+    },
+    {
+      "path": "source/stylus/style.styl",
+      "imports": [
+        "source/stylus/inc/variables.styl",
+        "source/stylus/inc/mixin.styl",
+        "source/stylus/inc/typo.styl",
+        "source/stylus/inc/text.styl",
+        "source/stylus/inc/paper.styl",
+        "source/stylus/inc/card.styl",
+        "source/stylus/inc/section.styl",
+        "source/stylus/inc/w.styl",
+        "source/stylus/inc/offset.styl",
+        "source/stylus/inc/swiper.styl",
+        "source/stylus/inc/iCheck.styl",
+        "source/stylus/inc/ion-rangeSlider.styl"
+      ]
+    },
+    {
+      "path": "source/pug/-/article.pug",
+      "imports": [
+        "source/pug/-/aside-rec-catalog.pug"
+      ]
+    },
+    {
+      "path": "source/pug/-/card.pug",
+      "imports": [
+        "source/pug/-/aside-rec-catalog.pug"
       ]
     }
   ],
