✅ Страница пример вариантов сетки католога

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -158,6 +158,23 @@
       "imports": [
         "source/pug/-/aside-rec-catalog.pug"
       ]
+    },
+    {
+      "path": "source/catalog.pug",
+      "imports": [
+        "source/pug/head.pug",
+        "source/pug/sprite.pug",
+        "source/pug/top.pug",
+        "source/pug/header.pug",
+        "source/pug/menu-catalog.pug",
+        "source/pug/top-menu-catalog.pug",
+        "source/pug/breadcrumbs.pug",
+        "source/pug/grid-catalog.pug",
+        "source/pug/foo-nav.pug",
+        "source/pug/map-of-services.pug",
+        "source/pug/script.pug",
+        "source/pug/aside-rec.pug"
+      ]
     }
   ],
   "projectView": {
